<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <EditText
        android:id="@+id/edit_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editText_year"
        android:inputType="number" />

    <EditText
        android:id="@+id/edit_make"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editText_make"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edit_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editText_model"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editText_partnumber"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button_concat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_concat" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_add" />

    <TextView
        android:id="@+id/textView_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.Holo.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="112dp" />

    <TextView
        android:id="@+id/textView_concat"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:textAlignment="center"
        android:textSize="24sp" />

</LinearLayout>